# Loom

./: .env.docker.example  .env.example  .gitignore  DOCKER.md  Dockerfile  HANDOVER.md  LICENSE  QUICKSTART.md  README-VPS-FULL.md  README.md  docker-compose.yml  git-init.sh  install.sh  main.py  pyproject.toml  run_local.py  setup.sh  update.sh
backend/: alembic.ini
backend/api/: Dockerfile  main.py
backend/bot/: .env.example  .gitignore  Dockerfile  README.md  config.py  db.py  main.py  requirements.txt  scheduler.py  states.py
backend/bot/handlers/: __init__.py  cabinet.py  onboarding.py  pairing.py  partner.py  payment.py  start.py  sync.py
backend/bot/keyboards/: common.py
backend/bot/migrations/: env.py
backend/bot/models/: __init__.py  activation_code.py  base.py  catalog.py  cycle_forecast.py  delivery_history.py  order.py  pairing_token.py  profile.py  subscription.py  symptom_entry.py  user.py
backend/bot/services/: admin_notify.py  catalog.py  codes.py  cycle_code.py  forecasts.py  pairing.py  partners.py  payments.py  recommender.py  schema_upgrade.py  subscriptions.py  symptom_diary.py  users.py
fail2ban/: filter-nginx-limit-req.conf  jail.local
nginx/: lira.conf
systemd/: lira-api.service
web/: diary.html  index.html  manifest.webmanifest  partner-invite.html  share-pdf.html  sw.js
web/_expo/static/js/web/: index-96e0bdac4178cd8172020564110deb3c.js  index-c3d6f1b6657cf68d3df3bbb66966ec14.js
web/legal/: about.html  contacts.html  footer.js  offer.html  privacy.html  style.css
