[project]
name = "lira"
version = "0.1.0"
description = "Lira cycle tracker — FastAPI backend + prebuilt web bundle."
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.13.1",
    "sqlalchemy[asyncio]==2.0.36",
    "aiosqlite==0.20.0",
    "alembic==1.14.0",
    "pydantic>=2.4.1,<2.10",
    "pydantic-settings>=2.3,<2.7",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "apscheduler==3.11.0",
    "python-dotenv==1.0.1",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
